<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sword_gray"
    android:theme="@style/Theme.Material3.Dark.NoActionBar"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/location_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/partial_black"
        android:gravity="start"
        android:paddingHorizontal="36dp"
        android:paddingTop="12dp"
        android:text="@string/location_label"
        android:textAlignment="gravity"
        android:textColor="@color/stone_gray"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/partial_black"
        android:gravity="start"
        android:paddingHorizontal="36dp"
        android:paddingBottom="12dp"
        android:text="@string/default_location"
        android:textAlignment="gravity"
        android:textColor="@color/cloud_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_label"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/weather_forecast_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/partial_black"
        android:contentDescription="@string/weather_forecast_image_description"
        android:foregroundGravity="center"
        android:paddingVertical="12dp"
        android:src="@drawable/icon_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/weather_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/default_weather_description"
        android:textAlignment="gravity"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_forecast_image" />

    <TextView
        android:id="@+id/current_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/default_temperature_text"
        android:textAlignment="gravity"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_description" />

    <TextView
        android:id="@+id/minimum_temperature_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/minimum_temperature_label"
        android:textAlignment="gravity"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/feels_like_temperature_label"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_temperature" />

    <TextView
        android:id="@+id/feels_like_temperature_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/feels_like_temperature_label"
        android:textAlignment="gravity"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/maximum_temperature_label"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/minimum_temperature"
        app:layout_constraintTop_toBottomOf="@+id/current_temperature" />

    <TextView
        android:id="@+id/maximum_temperature_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/maximum_temperature_label"
        android:textAlignment="gravity"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/feels_like_temperature_label"
        app:layout_constraintTop_toBottomOf="@+id/current_temperature" />

    <TextView
        android:id="@+id/minimum_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/default_temperature_text"
        android:textAlignment="gravity"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/feels_like_temperature"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minimum_temperature_label" />

    <TextView
        android:id="@+id/feels_like_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/default_temperature_text"
        android:textAlignment="gravity"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/maximum_temperature"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/minimum_temperature"
        app:layout_constraintTop_toBottomOf="@+id/feels_like_temperature_label" />

    <TextView
        android:id="@+id/maximum_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/default_temperature_text"
        android:textAlignment="gravity"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/feels_like_temperature"
        app:layout_constraintTop_toBottomOf="@+id/maximum_temperature_label" />

</androidx.constraintlayout.widget.ConstraintLayout>
